<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingHorizontal="4dp"
            android:layout_marginVertical="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:layout_weight="12"
            android:paddingVertical="8dp"/>

        <Button
            android:id="@+id/get_news_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:layout_weight="1"
            android:backgroundTint="@color/primaryGradientColor"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_marginHorizontal="4dp"
        android:id="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/filterAndSortTab"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_desire_font" />

    <RadioGroup
        android:paddingVertical="8dp"
        android:paddingHorizontal="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sort_radio_group">

        <RadioButton
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relevance"
            android:textStyle="bold"
            android:id="@+id/relevance"
            android:buttonTint="@color/purple_500"/>

        <RadioButton
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popularity"
            android:textStyle="bold"
            android:id="@+id/popularity"
            android:checked="false"
            android:buttonTint="@color/purple_500"/>

        <RadioButton
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textStyle="bold"
            android:id="@+id/time"
            android:checked="false"
            android:buttonTint="@color/purple_500"/>

    </RadioGroup>

    <TextView
        android:id="@+id/choose_language_text"
        android:paddingHorizontal="4dp"
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_language"
        android:paddingVertical="8dp"/>

    <View
        android:layout_marginHorizontal="4dp"
        android:id="@+id/divider1"
        app:layout_constraintTop_toBottomOf="@+id/filterAndSortTab"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_desire_font" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/choose_country_dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:startIconDrawable="@drawable/ic_baseline_language_24"
        app:startIconTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <AutoCompleteTextView
            android:id="@+id/languageAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:layout_weight="1"
            android:labelFor="@+id/choose_language_text"/>

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>